# nixie

./: .gitignore  CMakeLists.txt
.github/workflows/: test.yml
src/: CMakeLists.txt
src/nixie/: Main.cpp
src/nixie/apps/: AppConfig.hpp  MessageApps.cpp  MessageApps.hpp  SlashApps.cpp  SlashApps.hpp
src/nixie/apps/math/: Units.cpp  Units.hpp
src/nixie/config/: Config.cpp  Config.hpp
src/nixie/util/: Formatters.hpp  Preprocessor.cpp  Preprocessor.hpp
tests/: CMakeLists.txt
tests/src/: PreprocessorTests.cpp  UnitConversionTests.cpp
